Rachel Explore Markdown 1

--- a/Final/final_report.ipynb
+++ b/Final/final_report.ipynb
@@ -791,6 +791,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4b897a71-03f3-440f-a53c-7c5ca636dc48",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "919c78fe-d835-4aa1-ab27-80c23b51faf5",
    "metadata": {},
    "source": [
@@ -807,14 +815,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b897a71-03f3-440f-a53c-7c5ca636dc48",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "7c18e44d-ab8b-4cd3-af33-6388dd07862f",
    "metadata": {},
    "source": [
@@ -823,9 +823,12 @@
     "The initial questions for this project revolved around sentiment and topic prevalence and were used as the foundation of exploration.\n",
     "\n",
     "- How does sentiment within lyrics change over time?\n",
-    "- Is there a correlation between events in history and sentiment of lyrics?\n",
-    "- What topics are most prevalent across the decades?\n",
+    "- What topics are most prevalent across the Billboard Hot 100?\n",
     "- How do topics within lyrics change over time?\n",
+    "- What is the relationship between Sex and Affection?\n",
+    "\n",
+    "\n",
+    "- Is there a correlation between events in history and sentiment of lyrics?\n",
     "- Is there a correlation between topics and the time a song was popular?\n",
     "---"
    ]
@@ -869,10 +872,10 @@
    "metadata": {},
    "source": [
     "#### ANSWER 1:\n",
-    "Sentiment was fairly steady in the 1950's and 1960's, followed by a gradual **downward trend** through the 1970's and 1980's. The downward trend became **more sharp begining in the 1990's**. The 2000's and 2010's saw the most significant drop in sentiment. \n",
+    "Sentiment was steady in the 1950's and 1960's, followed by a gradual **downward trend** through the 1970's and 1980's. The downward trend became **more sharp begining in the 1990's**. The 2000's and 2010's saw the most significant drop in sentiment. \n",
     "\n",
-    "### NEED EVIDENCE OF THIS\n",
-    "**The downward trend is due to an increase in very negative sentiment and decrease in very positive sentiment while mid-range sentiment stays constant.** WHERE IS THE EVIDENCE OF THIS?????\n",
+    "### ????????????????NEED EVIDENCE OF THIS????????????????\n",
+    "@BEN **The downward trend is due to an increase in very negative sentiment and decrease in very positive sentiment while mid-range sentiment stays constant.** \n",
     "\n",
     "---"
    ]
@@ -883,7 +886,7 @@
    "metadata": {},
    "source": [
     "#### QUESTION 2:\n",
-    "#### **What topics are most prevalent across the decades?**"
+    "#### **What topics are most prevalent across the Billboard Hot 100?**"
    ]
   },
   {
@@ -976,10 +979,18 @@
    "id": "af057b48",
    "metadata": {},
    "source": [
-    "**Observation:**\n",
-    "Within the **Relationship Topics** grouping, breakups, heartache, jealousy, and love stay somewhat consistent in prevalence within the lyrics across the decades. Affection steadily decreases from being the 2nd most prevalent topic for 30 years, from the 1960's until the 1990's, when the topic of sex rises to the second most prevalent topic, then overtakes breakups for the most prevalent topic around 2018. \n",
+    "**Answer:**\n",
+    "Within the **Relationship Topics** grouping, breakups, heartache, jealousy, and love stay somewhat consistent in prevalence within the lyrical corpus across the decades. Affection steadily decreases from being the 2nd most prevalent topic for 30 years, from the 1960's until the 1990's. **In the '90's the topic of sex suddenly rises** from the least prevalent to the second most prevalent topic, then overtakes breakups for the most prevalent topic around 2018. \n",
     "\n",
     "**Note**: For the purpose of this project the topic of sex is defined as more forward and explicit encounters with a partner while affection is more sensual encounters such as touching, hugging, or kissing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fa30dd7-b44a-4721-951b-8beb73246a94",
+   "metadata": {},
+   "source": [
+    "Noticing the significant changes to the topics of Affection and Sex over time, a closer look was conducted."
    ]
   },
   {
@@ -992,10 +1003,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fa30dd7-b44a-4721-951b-8beb73246a94",
+   "id": "f1404659-7c1b-4c7e-a21a-71a1cce8d51f",
    "metadata": {},
    "source": [
-    "Taking the observations found when looking at how the topics within the  **Relationship** groupings"
+    "#### Q3A: What is the relationship between Sex and Affection?"
    ]
   },
   {
@@ -1026,7 +1037,7 @@
    "metadata": {},
    "source": [
     "**Observation:**\n",
-    "Within the **Relationship Topics** grouping, breakups, heartache, jealousy, and love stay somewhat consistent in prevalence within the lyrics across the decades. Affection steadily decreases from being the 2nd most prevalent topic for 30 years, from the 1960's until the 1990's, when the topic of sex rises to the second most prevalent topic, then overtakes breakups for the most prevalent topic around 2018. "
+    "Sex and Affection have an **inverse relationship**, with the **shift occurring in the 1990's**. Affection was consistently represented across the lyrical corpus for nearly 40 years, from the late 1950's through the late '90's, while the topic of Sex exploded in usage in the early '90s. Shortly after the increased prevalence of the Sex topic, the affection topic declined in prevalence. "
    ]
   },
   {
@@ -1231,7 +1242,10 @@
   {
    "cell_type": "markdown",
    "id": "b74491e4-2da9-4f32-a606-c7b1b9dd8f6c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### EXPLORATION SUMMARY\n",
     "Exploration revealed significant changes to sentiment and topic prevalence across the decades, indicating **a cultural shift starting in the 90's where:** \n",
@@ -1245,22 +1259,33 @@
     "\n",
     "This information was utilized going forward into modeling to adjust hyperparameters based upon impactful features, primarily _____________ ___________. ____________.\n",
     "\n",
-    "===\n",
-    "An Overview of the exploratory questions and answers follows:\n",
+    "==================================================== Overview of Exploratory Questions & Answers ==================================================== \n",
+    "- 1. **How does sentiment within lyrics change over time?**\n",
     "\n",
-    "1. How does sentiment within lyrics change over time?\n",
-    "- Sentiment was fairly steady in the 1950's and 1960's, followed by a gradual **downward trend** through the 1970's and 1980's. The downward trend became **more sharp begining in the 1990's**. The 2000's and 2010's saw the most significant drop in sentiment. \n",
+    "Sentiment was fairly steady in the 1950's and 1960's, followed by a gradual **downward trend** through the 1970's and 1980's. The downward trend became **more sharp begining in the 1990's**. The 2000's and 2010's saw the most significant drop in sentiment. \n",
     "\n",
-    "2. Is there a correlation between events in history and sentiment of lyrics?\n",
+    "- 2. **What topics are most prevalent across the Billboard Hot 100?**\n",
     "\n",
-    "\n",
-    "3. What topics are most prevalent across the decades?\n",
+    "By count, **breakup references are the most frequently occurring topic** within the Billboard Top 100 Song catalog, with the topics of lost, affection, sex, and nature rounding out the top 5 most prevalent topics within the corpus. The 5 least prevalent topics are spanish, holiday, jealousy, heartache, and transcendental.\n",
     "\n",
     "\n",
-    "4. How do topics within lyrics change over time?\n",
+    "- 3. **How do topics within lyrics change over time?**\n",
+    "    - **Q3A: How do **Relationship Topics** change over the decades?**\n",
+    "\n",
+    "Within the **Relationship Topics** grouping, breakups, heartache, jealousy, and love stay somewhat consistent in prevalence within the lyrical corpus across the decades. Affection steadily decreases from being the 2nd most prevalent topic for 30 years, from the 1960's until the 1990's. **In the '90's the topic of sex suddenly rises** from the least prevalent to the second most prevalent topic, then overtakes breakups for the most prevalent topic around 2018. \n",
     "\n",
     "\n",
-    "5. Is there a correlation between topics and the time a song was popular?\n",
+    "    -**Q3B: What is the relationship between Sex and Affection?**\n",
+    "\n",
+    "Sex and Affection have an **inverse relationship**, with the **shift occurring in the 1990's**. Affection was consistently represented across the lyrical corpus for nearly 40 years, from the late 1950's through the late '90's, while the topic of Sex exploded in usage in the early '90s. Shortly after the increased prevalence of the Sex topic, the affection topic declined in prevalence. \n",
+    "\n",
+    "    - **Q3C: How do **Vice Topics** change over the decades?**\n",
+    "\n",
+    "\n",
+    "- 4. How do topics within lyrics change over time?\n",
+    "\n",
+    "\n",
+    "- 5. Is there a correlation between topics and the time a song was popular?\n",
     "\n",
     "\n"
    ]
