Updated thorugh Question 3

--- a/Final/final_report.ipynb
+++ b/Final/final_report.ipynb
@@ -868,12 +868,41 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbdad8f7",
+   "id": "e9da3e5f-8589-4521-ac5b-f0e78436254e",
    "metadata": {},
    "source": [
     "#### ANSWER 1:\n",
-    "Sentiment was steady in the 1950's and 1960's, followed by a gradual **downward trend** through the 1970's and 1980's. The downward trend became **more sharp begining in the 1990's**. The 2000's and 2010's saw the most significant drop in sentiment. \n",
-    "\n",
+    "Sentiment was steady in the 1950's and 1960's, followed by a gradual **downward trend** through the 1970's and 1980's. The downward trend became **more sharp begining in the 1990's**. The 2000's and 2010's saw the most significant drop in sentiment. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "cc0bff0b-142a-4381-9283-c4d12421c8c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/jx/x5_xzwy107g6d0zd021r2ph40000gn/T/ipykernel_24200/22520041.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mexplore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msentiment_stacked_bar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/codeup-data-science/song-lyrics-capstone/Final/final_explore.py\u001b[0m in \u001b[0;36msentiment_stacked_bar\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m    210\u001b[0m     \u001b[0;31m# create the plot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m     (\n\u001b[0;32m--> 212\u001b[0;31m         \u001b[0mdf2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'decade'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    213\u001b[0m          \u001b[0;34m.\u001b[0m\u001b[0msentiment_category_2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m          \u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnormalize\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df2' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "explore.sentiment_stacked_bar(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0481608d-069a-4f81-80d3-8af4eed50caf",
+   "metadata": {},
+   "source": [
     "### ????????????????NEED EVIDENCE OF THIS????????????????\n",
     "@BEN **The downward trend is due to an increase in very negative sentiment and decrease in very positive sentiment while mid-range sentiment stays constant.** \n",
     "\n",
