added answers to questions 6 and 7 (markdown)

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -1125,16 +1125,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "bd98b9ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#### Hypothesis Testing - "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "69707286",
    "metadata": {},
@@ -1174,16 +1164,6 @@
    "source": [
     "# create visualization using the love_vs_like_lineplot function found in final_explore.py \n",
     "explore.love_vs_like_lineplot(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "e12fac52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Hypothesis Testing - "
    ]
   },
   {
@@ -1231,7 +1211,9 @@
    "id": "c532f1b0",
    "metadata": {},
    "source": [
-    "#### Answer 6:"
+    "#### Answer 6:\n",
+    "\n",
+    "Though it does appear at first glance that a change in sentiment might correspond with some of these (obviously significant) historical events, this analysis is not in-depth enough to make any concrete conclusions about cause, effect, or correlation. "
    ]
   },
   {
@@ -1270,7 +1252,9 @@
    "id": "46a95962",
    "metadata": {},
    "source": [
-    "#### ANSWER 7:"
+    "#### ANSWER 7:\n",
+    "\n",
+    "Based on a rolling 5-year average, we see a fairly steady increase in the number of unique words per song, with the only significant downturn appearing from the mid 2000's to the mid 2010s. "
    ]
   },
   {
