--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -1302,15 +1302,15 @@
     "\n",
     "\n",
     "#### 3. **How do topics within lyrics change over time?**\n",
-    "- **Q3A: How do **Relationship Topics** change over the decades?**\n",
+    "#### - **Q3A: How do **Relationship Topics** change over the decades?**\n",
     "\n",
     "Within the **Relationship Topics** grouping, breakups, heartache, jealousy, and love stay somewhat consistent in prevalence within the lyrical corpus across the decades. Affection steadily decreases from being the 2nd most prevalent topic for 30 years, from the 1960's until the 1990's. **In the '90's the topic of sex suddenly rises** from the least prevalent to the second most prevalent topic, then overtakes breakups for the most prevalent topic around 2018. \n",
     "\n",
-    "- **Q3B: What is the relationship between Sex and Affection?**\n",
+    "#### - **Q3B: What is the relationship between Sex and Affection?**\n",
     "\n",
     "Sex and Affection have an **inverse relationship**, with the **shift occurring in the 1990's**. Affection was consistently represented across the lyrical corpus for nearly 40 years, from the late 1950's through the late '90's, while the topic of Sex exploded in usage in the early '90s. Shortly after the increased prevalence of the Sex topic, the affection topic declined in prevalence. \n",
     "\n",
-    "- **Q3C: How do **Vice Topics** change over the decades?**\n",
+    "#### - **Q3C: How do **Vice Topics** change over the decades?**\n",
     "After 1990 sex became extremely popular in lyrics, then around 2015 violence and money exploded as well.\n",
     "\n",
     "\n",
@@ -1508,11 +1508,76 @@
    "execution_count": 23,
    "id": "cdfe81b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "******* Returning Results ***********\r"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_number</th>\n",
+       "      <th>model_type</th>\n",
+       "      <th>train_accuracy</th>\n",
+       "      <th>validate_accuracy</th>\n",
+       "      <th>better_than_baseline</th>\n",
+       "      <th>max_depth</th>\n",
+       "      <th>baseline_accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>baseline</td>\n",
+       "      <td>baseline</td>\n",
+       "      <td>0.205677</td>\n",
+       "      <td>0.20559</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  model_number model_type train_accuracy validate_accuracy  \\\n",
+       "0     baseline   baseline       0.205677           0.20559   \n",
+       "\n",
+       "  better_than_baseline max_depth baseline_accuracy  \n",
+       "0                False       NaN               NaN  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# uncommit to run the following code\n",
-    "# results = model.run_decision_tree_models(df)\n",
-    "# results.drop(columns='test_accuracy').head(1) # show baseline"
+    "results = model.run_decision_tree_models(df)\n",
+    "results.drop(columns='test_accuracy').head(1) # show baseline"
    ]
   },
   {
@@ -1520,10 +1585,92 @@
    "execution_count": 24,
    "id": "f05f4dee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_number</th>\n",
+       "      <th>model_type</th>\n",
+       "      <th>train_accuracy</th>\n",
+       "      <th>validate_accuracy</th>\n",
+       "      <th>better_than_baseline</th>\n",
+       "      <th>max_depth</th>\n",
+       "      <th>baseline_accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>DecisionTreeClassifier</td>\n",
+       "      <td>0.411755</td>\n",
+       "      <td>0.312324</td>\n",
+       "      <td>True</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.20559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>DecisionTreeClassifier</td>\n",
+       "      <td>0.999759</td>\n",
+       "      <td>0.300694</td>\n",
+       "      <td>True</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.20559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>DecisionTreeClassifier</td>\n",
+       "      <td>0.321058</td>\n",
+       "      <td>0.295629</td>\n",
+       "      <td>True</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.20559</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  model_number              model_type train_accuracy validate_accuracy  \\\n",
+       "6            6  DecisionTreeClassifier       0.411755          0.312324   \n",
+       "7            7  DecisionTreeClassifier       0.999759          0.300694   \n",
+       "5            5  DecisionTreeClassifier       0.321058          0.295629   \n",
+       "\n",
+       "  better_than_baseline max_depth baseline_accuracy  \n",
+       "6                 True        10           0.20559  \n",
+       "7                 True       100           0.20559  \n",
+       "5                 True         5           0.20559  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# uncommit to run the following code\n",
-    "# results.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
+    "results.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
    ]
   },
   {
@@ -1555,11 +1702,108 @@
    "execution_count": 25,
    "id": "6f34d609",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "******* Returning Results *********** out of '1, 2, 3, 4, 5, 10, 100'\r"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_number</th>\n",
+       "      <th>model_type</th>\n",
+       "      <th>train_accuracy</th>\n",
+       "      <th>validate_accuracy</th>\n",
+       "      <th>better_than_baseline</th>\n",
+       "      <th>max_depth</th>\n",
+       "      <th>min_samples_leaf</th>\n",
+       "      <th>criterion</th>\n",
+       "      <th>baseline_accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>94</td>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>0.936319</td>\n",
+       "      <td>0.404802</td>\n",
+       "      <td>True</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2</td>\n",
+       "      <td>gini</td>\n",
+       "      <td>0.20559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>95</td>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>0.923776</td>\n",
+       "      <td>0.399362</td>\n",
+       "      <td>True</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2</td>\n",
+       "      <td>entropy</td>\n",
+       "      <td>0.20559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>97</td>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>0.8215</td>\n",
+       "      <td>0.391296</td>\n",
+       "      <td>True</td>\n",
+       "      <td>100</td>\n",
+       "      <td>3</td>\n",
+       "      <td>entropy</td>\n",
+       "      <td>0.20559</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   model_number    model_type train_accuracy validate_accuracy  \\\n",
+       "87           94  RandomForest       0.936319          0.404802   \n",
+       "88           95  RandomForest       0.923776          0.399362   \n",
+       "90           97  RandomForest         0.8215          0.391296   \n",
+       "\n",
+       "   better_than_baseline max_depth min_samples_leaf criterion baseline_accuracy  \n",
+       "87                 True       100                2      gini           0.20559  \n",
+       "88                 True       100                2   entropy           0.20559  \n",
+       "90                 True       100                3   entropy           0.20559  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# uncommit to run the following code\n",
-    "# results2 = model.run_random_forest_models(df)\n",
-    "# results2.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
+    "results2 = model.run_random_forest_models(df)\n",
+    "results2.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
    ]
   },
   {
@@ -1591,11 +1835,104 @@
    "execution_count": 26,
    "id": "678c6e66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "******* Returning Results ***********, \"lbfgs\", \"newton-cg\", \"sag\", \"saga\"saga\"\r"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_number</th>\n",
+       "      <th>model_type</th>\n",
+       "      <th>train_accuracy</th>\n",
+       "      <th>validate_accuracy</th>\n",
+       "      <th>better_than_baseline</th>\n",
+       "      <th>baseline_accuracy</th>\n",
+       "      <th>solver</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>116</td>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.69832</td>\n",
+       "      <td>0.457325</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.20559</td>\n",
+       "      <td>lbfgs</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>123</td>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.699043</td>\n",
+       "      <td>0.457137</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.20559</td>\n",
+       "      <td>newton-cg</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>130</td>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.699043</td>\n",
+       "      <td>0.457137</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.20559</td>\n",
+       "      <td>sag</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   model_number          model_type train_accuracy validate_accuracy  \\\n",
+       "11          116  LogisticRegression        0.69832          0.457325   \n",
+       "18          123  LogisticRegression       0.699043          0.457137   \n",
+       "25          130  LogisticRegression       0.699043          0.457137   \n",
+       "\n",
+       "   better_than_baseline baseline_accuracy     solver  C  \n",
+       "11                 True           0.20559      lbfgs  1  \n",
+       "18                 True           0.20559  newton-cg  1  \n",
+       "25                 True           0.20559        sag  1  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# uncommit to run the following code\n",
-    "# results3 = model.run_logistic_reg_models(df)\n",
-    "# results3.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
+    "results3 = model.run_logistic_reg_models(df)\n",
+    "results3.drop(columns='test_accuracy').sort_values('validate_accuracy', ascending=False).head(3)"
    ]
   },
   {
@@ -1627,10 +1964,72 @@
    "execution_count": 27,
    "id": "0a4460fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_number</th>\n",
+       "      <th>model_type</th>\n",
+       "      <th>train_accuracy</th>\n",
+       "      <th>validate_accuracy</th>\n",
+       "      <th>test_accuracy</th>\n",
+       "      <th>better_than_baseline</th>\n",
+       "      <th>baseline_accuracy</th>\n",
+       "      <th>solver</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>116</td>\n",
+       "      <td>LogisticRegression</td>\n",
+       "      <td>0.69832</td>\n",
+       "      <td>0.457325</td>\n",
+       "      <td>0.448897</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.20559</td>\n",
+       "      <td>lbfgs</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   model_number          model_type train_accuracy validate_accuracy  \\\n",
+       "11          116  LogisticRegression        0.69832          0.457325   \n",
+       "\n",
+       "   test_accuracy better_than_baseline baseline_accuracy solver  C  \n",
+       "11      0.448897                 True           0.20559  lbfgs  1  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# uncommit to run the following code\n",
-    "# results3.sort_values('validate_accuracy', ascending=False).head(1)\n"
+    "results3.sort_values('validate_accuracy', ascending=False).head(1)"
    ]
   },
   {
